Update streaming URLs for various channels 14.html

--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
         { name: 'IRINN / KHABAR', url: 'https://m.telewebion.com/embed/live/irinn?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
         { name: 'KHABAR2', url: 'https://m.telewebion.com/embed/live/irinn2?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
         { name: 'IFILM Farsi', url: 'https://m.telewebion.com/embed/live/ifilm?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
-        { name: 'IFILM Dari (HLS)', url: 'https://live.ifilmtv.com/ifilmtv-dari/index.m3u8', color: 'green' },
-        { name: 'IFILM English (HLS)', url: 'https://live.ifilmtv.com/ifilmtv-english/index.m3u8', color: 'green' },
-        { name: 'IFILM Arabic (HLS)', url: 'https://live.ifilmtv.com/ifilmtv-arabic/index.m3u8', color: 'green' },
+        { name: 'IFILM Dari (HLS)', url: 'https://live.presstv.ir/hls/ifilm2.m3u8', color: 'green' },
+        { name: 'IFILM English (HLS)', url: 'https://live.presstv.ir/hls/ifilmen.m3u8', color: 'green' },
+        { name: 'IFILM Arabic (HLS)', url: 'https://live.presstv.ir/hls/ifilmar.m3u8', color: 'green' },
         { name: 'TV1PLUS', url: 'https://m.telewebion.com/embed/live/tv1plus?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
         { name: 'OMID', url: 'https://m.telewebion.com/embed/live/omid?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
         { name: 'NAMAYESH', url: 'https://m.telewebion.com/embed/live/namayesh?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
@@ -413,31 +413,33 @@
         { name: 'ZANJAN', url: 'https://m.telewebion.com/embed/live/eshragh?autoplay=1&mute=0', color: 'cyan', method: 'iframe' }
       ],
       kurdish: [
-        { name: 'Zagros (HLS)', url: 'https://5a61de8ed719d.streamlock.net/liveTrans/ngrp:myStream_all/playlist.m3u8', color: 'green' },
-        { name: 'Kanal8 (HLS)', url: 'https://live.channel8.com/channel8-live/smil:channel8.smil/playlist.m3u8', color: 'green' },
+        { name: 'Zagros (HLS)', url: 'https://5a3ed7a72ed4b.streamlock.net/zagrostv/SMIL:myStream.smil/playlist.m3u8', color: 'green' },
+        { name: 'Kanal8 (HLS)', url: 'https://live.channel8.com/Channel8-Kurdish/index.fmp4.m3u8', color: 'green' },
         { name: 'Rudaw (HLS)', url: 'https://svs.itworkscdn.net/rudawlive/rudawlive.smil/playlist.m3u8', color: 'green' },
-        { name: 'Kurdsat News (HLS)', url: 'https://bozztv.com/1gbw5/tintela/tintela/playlist.m3u8', color: 'green' },
-        { name: 'Sterk (HLS)', url: 'https://us01.streamcloud-services.com/sterk/ngrp:livestream_all/playlist.m3u8', color: 'green' },
+        { name: 'Kurdsat News (HLS)', url: 'https://hlspackager.akamaized.net/live/DB/KURDSAT_NEWS/HLS/KURDSAT_NEWS.m3u8', color: 'green' },
+        { name: 'Sterk (HLS)', url: 'https://5dab1db4b25fe.streamlock.net/sterk/sterktv/chunklist_w1084077249.m3u8', color: 'green' },
         { name: 'NRT News (HLS)', url: 'https://media.streambrothers.com:1936/8226/8226/playlist.m3u8', color: 'green' },
-        { name: '4 Kurd (HLS)', url: 'https://ghasel.online/4Kurd/index.m3u8', color: 'green' },
+        { name: '4 Kurd (HLS)', url: 'https://4kuhls.persiana.live/hls/stream.m3u8', color: 'green' },
         { name: 'Med Music (HLS)', url: 'https://medmusic.cdn.asset.aparat.com/medmusic/index.m3u8', color: 'green' },
-        { name: 'Aryen (HLS)', url: 'https://hls.aryen.me/hls/stream.m3u8', color: 'green' },
+        { name: 'Aryen (HLS)', url: 'https://stream.aryen.tv/live/tv/chunklist_w189856026.m3u8', color: 'green' },
         { name: 'Cira (HLS)', url: 'https://live.ciratv.net/ciratv/index.m3u8', color: 'green' },
-        { name: 'Waar (HLS)', url: 'https://hls.waartv.eu/hls/stream.m3u8', color: 'green' },
+        { name: 'Waar (HLS)', url: 'https://live.kwikmotion.com/waarmedialive/waarmedia.smil/waarmediapublish/waarmedia_source/chunks.m3u8', color: 'green' },
         { name: 'Rojava (HLS)', url: 'https://live.rojavatv.net/rojavatv/index.m3u8', color: 'green' },
-        { name: 'Kurdsat HD (HLS)', url: 'https://bozztv.com/1gbw5/tintela/tintela/playlist.m3u8', color: 'green' },
+        { name: 'Kurdsat HD (HLS)', url: 'https://hlspackager.akamaized.net/live/DB/KURDSAT_HD/HLS/KURDSAT_HD.m3u8', color: 'green' },
         { name: 'Kurdistan TV (HLS)', url: 'https://5a3ed7a72ed4b.streamlock.net/live/SMIL:myStream.smil/playlist.m3u8', color: 'green' },
-        { name: 'PDKI (HLS)', url: 'https://live.pdki.tv/pdkitv/index.m3u8', color: 'green' },
-        { name: 'Komala (HLS)', url: 'https://live.komala.tv/komala/index.m3u8', color: 'green' },
-        { name: 'GK (HLS)', url: 'https://hls.gktop.tv/hls/stream.m3u8', color: 'green' },
-        { name: 'IRIB Kurdistan (HLS)', url: 'https://lenz.splus.ir/PLTV/88888888/224/3221226647/index.m3u8', color: 'green' },
+        { name: 'PDKI (HLS)', url: 'https://cdn.northtelecom.org/KurdChannel.m3u8', color: 'green' },
+        { name: 'Komala (HLS)', url: 'https://live.tvkomala.com/live/komala/playlist.m3u8', color: 'green' },
+        { name: 'GK (HLS)', url: 'https://live.host247.net/gk/gksat/playlist.m3u8', color: 'green' },
+        { name: 'IRIB Kurdistan (HLS)', url: 'https://live.irib.ir/Channel-Live/smil:Channel5/playlist.m3u8', color: 'green' },
         { name: 'Ava TV (Web)', url: 'https://www.ava.news/livewatch', method: 'external', color: 'orange' },
         { name: 'Sahar TV (Web)', url: 'https://kurdish.sahartv.ir/live', method: 'external', color: 'orange' },
         { name: 'UTV Hawler (Web)', url: 'https://utvhawler.net/index.htm', method: 'external', color: 'orange' },
-        { name: 'Baxche (HLS)', url: 'https://live.baxchetv.com/baxche/index.m3u8', color: 'green' },
-        { name: 'Afarin Kids (HLS)', url: 'https://live.afarin.tv/afarin-kids/index.m3u8', color: 'green' },
-        { name: 'Zarok Kurmanci (HLS)', url: 'https://zindilair.zaroktv.com.tr/hls/stream.m3u8', color: 'green' },
-        { name: 'Zarok Sorani (HLS)', url: 'https://zindisorani.zaroktv.com.tr/hls/stream.m3u8', color: 'green' }
+        { name: 'Baxche (HLS)', url: 'https://5dcabf026b188.streamlock.net/afarinTV/livestream/playlist.m3u8', color: 'green' },
+        { name: 'Afarin Kids (HLS)', url: 'https://65f16f0fdfc51.streamlock.net/afarinTV/livestream/playlist.m3u8', color: 'green' },
+        { name: 'Zarok Kurmanci (HLS)', url: 'https://zindikurmanci.zaroktv.com.tr/hls/0/stream.m3u8', color: 'green' },
+        { name: 'Zarok Sorani (HLS)', url: 'https://zindisorani.zaroktv.com.tr/hls/stream.m3u8', color: 'green' },
+        { name: 'Payam TV (HLS)', url: 'https://live.payamtv.com/payamtv/index.m3u8', color: 'green' },
+        { name: 'TRT Kurdî (HLS)', url: 'https://tv-trtkurdi.medya.trt.com.tr/master_1440.m3u8', color: 'green' }
       ],
       karwan: [
         { name: 'Karwan Mmn News', url: 'https://karwan.tv/mmn-news.html', method: 'external', color: 'purple' },
