--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
         { name: 'IRINN / KHABAR', url: 'https://m.telewebion.com/embed/live/irinn?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
         { name: 'KHABAR2', url: 'https://m.telewebion.com/embed/live/irinn2?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
         { name: 'IFILM Farsi', url: 'https://m.telewebion.com/embed/live/ifilm?autoplay=1&mute=0', color: 'cyan', method: 'iframe' },
+        <div class="channel" onclick="load('ifilm','IFILM Farsi',this)"><span class="label">IFILM Farsi</span><button class="fav" onclick="toggleFav(event,'ifilm','IFILM Farsi',this)" aria-label="Lägg till favorit">☆</button></div>
         { name: 'IFILM Dari (HLS)', url: 'https://live.presstv.ir/hls/ifilm2.m3u8', color: 'green' },
         { name: 'IFILM English (HLS)', url: 'https://live.presstv.ir/hls/ifilmen.m3u8', color: 'green' },
         { name: 'IFILM Arabic (HLS)', url: 'https://live.presstv.ir/hls/ifilmar.m3u8', color: 'green' },
