--- a/index.html
+++ b/index.html
@@ -421,16 +421,16 @@
         { name: 'Sterk (HLS)', url: 'https://5dab1db4b25fe.streamlock.net/sterk/sterktv/chunklist_w1084077249.m3u8', color: 'green' },
         { name: 'NRT News (HLS)', url: 'https://media.streambrothers.com:1936/8226/8226/playlist.m3u8', color: 'green' },
         { name: '4 Kurd (HLS)', url: 'https://4kuhls.persiana.live/hls/stream.m3u8', color: 'green' },
-        { name: 'Med Music (HLS)', url: 'https://medmusic.cdn.asset.aparat.com/medmusic/index.m3u8', color: 'green' },
+        { name: 'Med Music (HLS)', url: 'https://zindu.tv/intern-play.php?url=http://54.36.110.140/live3/live3.m3u8', color: 'green' },
         { name: 'Aryen (HLS)', url: 'https://stream.aryen.tv/live/tv/chunklist_w189856026.m3u8', color: 'green' },
-        { name: 'Cira (HLS)', url: 'https://live.ciratv.net/ciratv/index.m3u8', color: 'green' },
+        { name: 'Cira (HLS)', url: 'https://vsd74.okcdn.ru/hls/9890583349861.m3u8/sig/ROHq5W_UeRQ/expires/1768216719038/srcIp/2.248.201.77/urls/185.226.53.83/clientType/0/srcAg/CHROME_MAC/mid/10267254464101/9890583349861_high/index.m3u8', color: 'green' },
         { name: 'Waar (HLS)', url: 'https://live.kwikmotion.com/waarmedialive/waarmedia.smil/waarmediapublish/waarmedia_source/chunks.m3u8', color: 'green' },
-        { name: 'Rojava (HLS)', url: 'https://live.rojavatv.net/rojavatv/index.m3u8', color: 'green' },
+        { name: 'Rojava (HLS)', url: 'https://hlspackager.akamaized.net/live/DB/ROJAVA_HD/HLS/ROJAVA_HD-mp4a_128000_eng=20000.m3u8', color: 'green' },
         { name: 'Kurdsat HD (HLS)', url: 'https://hlspackager.akamaized.net/live/DB/KURDSAT_HD/HLS/KURDSAT_HD.m3u8', color: 'green' },
         { name: 'Kurdistan TV (HLS)', url: 'https://5a3ed7a72ed4b.streamlock.net/live/SMIL:myStream.smil/playlist.m3u8', color: 'green' },
         { name: 'PDKI (HLS)', url: 'https://cdn.northtelecom.org/KurdChannel.m3u8', color: 'green' },
         { name: 'Komala (HLS)', url: 'https://live.tvkomala.com/live/komala/playlist.m3u8', color: 'green' },
-        { name: 'GK (HLS)', url: 'https://live.host247.net/gk/gksat/playlist.m3u8', color: 'green' },
+        { name: 'GK (HLS)', url: 'https://live.host247.net/gk/gksat/chunklist_w624411416.m3u8', color: 'green' },
         { name: 'IRIB Kurdistan (HLS)', url: 'https://live.irib.ir/Channel-Live/smil:Channel5/playlist.m3u8', color: 'green' },
         { name: 'Ava TV (Web)', url: 'https://www.ava.news/livewatch', method: 'external', color: 'orange' },
         { name: 'Sahar TV (Web)', url: 'https://kurdish.sahartv.ir/live', method: 'external', color: 'orange' },
@@ -439,7 +439,7 @@
         { name: 'Afarin Kids (HLS)', url: 'https://65f16f0fdfc51.streamlock.net/afarinTV/livestream/playlist.m3u8', color: 'green' },
         { name: 'Zarok Kurmanci (HLS)', url: 'https://zindikurmanci.zaroktv.com.tr/hls/0/stream.m3u8', color: 'green' },
         { name: 'Zarok Sorani (HLS)', url: 'https://zindisorani.zaroktv.com.tr/hls/stream.m3u8', color: 'green' },
-        { name: 'Payam TV (HLS)', url: 'https://live.payamtv.com/payamtv/index.m3u8', color: 'green' },
+        { name: 'Payam TV (HLS)', url: 'https://media2.streambrothers.com:1936/8218/8218/chunklist_w1239498607.m3u8', color: 'green' },
         { name: 'TRT Kurdî (HLS)', url: 'https://tv-trtkurdi.medya.trt.com.tr/master_1440.m3u8', color: 'green' }
       ],
       karwan: [
@@ -458,14 +458,19 @@
         { name: 'Karwan Kurdistan TV', url: 'https://karwan.tv/kurdistan-tv.html', method: 'external', color: 'purple' }
       ],
       websites: [
+        { name: 'IMVBox', url: 'http://127.0.0.1:8000/web/imvbox.html', method: 'web', color: 'orange' },
         { name: 'Giniko TV', url: 'https://giniko.com/watch.php?id=iran', method: 'external', color: 'orange' },
         { name: 'Persianity', url: 'https://persianity.com', method: 'external', color: 'orange' },
         { name: 'Parsa TV', url: 'https://parsatv.com', method: 'external', color: 'orange' },
+        { name: 'MDB Max', url: 'http://127.0.0.1:8000/web/mdbmax.html', method: 'web', color: 'orange' },
         { name: 'FarsiPlex', url: 'https://farsiplex.com', method: 'external', color: 'orange' },
+        { name: 'Flnd Buzz', url: 'http://127.0.0.1:8000/web/flndbuzz.html', method: 'web', color: 'orange' },
         { name: 'Farsiland Movies', url: 'https://farsiland.com/movies', method: 'external', color: 'orange' },
         { name: 'Persian Hive', url: 'https://persianhive.com', method: 'external', color: 'orange' },
         { name: 'Namakade', url: 'https://namakade.com', method: 'external', color: 'orange' },
-        { name: 'Telewebion', url: 'https://telewebion.com', method: 'external', color: 'orange' }
+        { name: 'Telewebion', url: 'http://127.0.0.1:8000/web/telewebion.html', method: 'web', color: 'orange' },
+        { name: 'Sepehr TV', url: 'http://127.0.0.1:8000/web/sepehr.html', method: 'web', color: 'orange' },
+        { name: 'Sassan TV', url: 'http://127.0.0.1:8000/web/sassan.html', method: 'web', color: 'orange' }
       ]
     };
 
