--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         { name: 'Aryen (HLS)', url: 'https://stream.aryen.tv/live/tv/chunklist_w189856026.m3u8', color: 'green' },
         { name: 'Cira (HLS)', url: 'https://vsd74.okcdn.ru/hls/9890583349861.m3u8/sig/ROHq5W_UeRQ/expires/1768216719038/srcIp/2.248.201.77/urls/185.226.53.83/clientType/0/srcAg/CHROME_MAC/mid/10267254464101/9890583349861_high/index.m3u8', color: 'green' },
         { name: 'Waar (HLS)', url: 'https://live.kwikmotion.com/waarmedialive/waarmedia.smil/waarmediapublish/waarmedia_source/chunks.m3u8', color: 'green' },
-        { name: 'Rojava (HLS)', url: 'https://hlspackager.akamaized.net/live/DB/ROJAVA_HD/HLS/ROJAVA_HD-mp4a_128000_eng=20000.m3u8', color: 'green' },
+        { name: 'Rojava (HLS)', url: 'https://hlspackager.akamaized.net/live/DB/ROJAVA_HD/HLS/ROJAVA_HD.m3u8?hdnea=exp=1768140786~acl=/~hmac=5cfa0f22b508e7ced937081a07cfdc6a1c8666c75a27d75d53cdc3bf53163ef3', color: 'green' },
         { name: 'Kurdsat HD (HLS)', url: 'https://hlspackager.akamaized.net/live/DB/KURDSAT_HD/HLS/KURDSAT_HD.m3u8', color: 'green' },
         { name: 'Kurdistan TV (HLS)', url: 'https://5a3ed7a72ed4b.streamlock.net/live/SMIL:myStream.smil/playlist.m3u8', color: 'green' },
         { name: 'PDKI (HLS)', url: 'https://cdn.northtelecom.org/KurdChannel.m3u8', color: 'green' },
@@ -458,19 +458,19 @@
         { name: 'Karwan Kurdistan TV', url: 'https://karwan.tv/kurdistan-tv.html', method: 'external', color: 'purple' }
       ],
       websites: [
-        { name: 'IMVBox', url: 'http://127.0.0.1:8000/web/imvbox.html', method: 'web', color: 'orange' },
+        { name: 'IMVBox', url: 'http://127.0.0.1:8000/web/imvbox.html', method: 'external', color: 'orange' },
         { name: 'Giniko TV', url: 'https://giniko.com/watch.php?id=iran', method: 'external', color: 'orange' },
         { name: 'Persianity', url: 'https://persianity.com', method: 'external', color: 'orange' },
         { name: 'Parsa TV', url: 'https://parsatv.com', method: 'external', color: 'orange' },
-        { name: 'MDB Max', url: 'http://127.0.0.1:8000/web/mdbmax.html', method: 'web', color: 'orange' },
+        { name: 'MDB Max', url: 'http://127.0.0.1:8000/web/mdbmax.html', method: 'external', color: 'orange' },
         { name: 'FarsiPlex', url: 'https://farsiplex.com', method: 'external', color: 'orange' },
-        { name: 'Flnd Buzz', url: 'http://127.0.0.1:8000/web/flndbuzz.html', method: 'web', color: 'orange' },
+        { name: 'Flnd Buzz', url: 'http://127.0.0.1:8000/web/flndbuzz.html', method: 'external', color: 'orange' },
         { name: 'Farsiland Movies', url: 'https://farsiland.com/movies', method: 'external', color: 'orange' },
         { name: 'Persian Hive', url: 'https://persianhive.com', method: 'external', color: 'orange' },
         { name: 'Namakade', url: 'https://namakade.com', method: 'external', color: 'orange' },
-        { name: 'Telewebion', url: 'http://127.0.0.1:8000/web/telewebion.html', method: 'web', color: 'orange' },
-        { name: 'Sepehr TV', url: 'http://127.0.0.1:8000/web/sepehr.html', method: 'web', color: 'orange' },
-        { name: 'Sassan TV', url: 'http://127.0.0.1:8000/web/sassan.html', method: 'web', color: 'orange' }
+        { name: 'Telewebion', url: 'http://127.0.0.1:8000/web/telewebion.html', method: 'external', color: 'orange' },
+        { name: 'Sepehr TV', url: 'http://127.0.0.1:8000/web/sepehr.html', method: 'external', color: 'orange' },
+        { name: 'Sassan TV', url: 'http://127.0.0.1:8000/web/sassan.html', method: 'external', color: 'orange' }
       ]
     };
 
