Update website URLs to external links 18.html

--- a/index.html
+++ b/index.html
@@ -458,19 +458,19 @@
         { name: 'Karwan Kurdistan TV', url: 'https://karwan.tv/kurdistan-tv.html', method: 'external', color: 'purple' }
       ],
       websites: [
-        { name: 'IMVBox', url: 'http://127.0.0.1:8000/web/imvbox.html', method: 'external', color: 'orange' },
-        { name: 'Giniko TV', url: 'https://giniko.com/watch.php?id=iran', method: 'external', color: 'orange' },
+        { name: 'IMVBox', url: 'https://www.imvbox.com/en', method: 'external', color: 'orange' },
         { name: 'Persianity', url: 'https://persianity.com', method: 'external', color: 'orange' },
         { name: 'Parsa TV', url: 'https://parsatv.com', method: 'external', color: 'orange' },
-        { name: 'MDB Max', url: 'http://127.0.0.1:8000/web/mdbmax.html', method: 'external', color: 'orange' },
+        { name: 'MDB Max', url: 'https://mdbmax.com/', method: 'external', color: 'orange' },
         { name: 'FarsiPlex', url: 'https://farsiplex.com', method: 'external', color: 'orange' },
-        { name: 'Flnd Buzz', url: 'http://127.0.0.1:8000/web/flndbuzz.html', method: 'external', color: 'orange' },
+        { name: 'Flnd Buzz', url: 'https://flnd.buzz/', method: 'external', color: 'orange' },
         { name: 'Farsiland Movies', url: 'https://farsiland.com/movies', method: 'external', color: 'orange' },
         { name: 'Persian Hive', url: 'https://persianhive.com', method: 'external', color: 'orange' },
         { name: 'Namakade', url: 'https://namakade.com', method: 'external', color: 'orange' },
-        { name: 'Telewebion', url: 'http://127.0.0.1:8000/web/telewebion.html', method: 'external', color: 'orange' },
-        { name: 'Sepehr TV', url: 'http://127.0.0.1:8000/web/sepehr.html', method: 'external', color: 'orange' },
-        { name: 'Sassan TV', url: 'http://127.0.0.1:8000/web/sassan.html', method: 'external', color: 'orange' }
+        { name: 'Telewebion', url: 'https://telewebion.com/', method: 'external', color: 'orange' },
+        { name: 'Sepehr TV', url: 'https://beta.sepehrtv.ir/', method: 'external', color: 'orange' },
+        { name: 'Sassan TV', url: 'https://sassantv.com/', method: 'external', color: 'orange' }
+        { name: 'Giniko TV', url: 'https://giniko.com/watch.php?id=iran', method: 'external', color: 'orange' },
       ]
     };
 
